infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' #allows us to use regular expression on line 28
spec:
  rules: #has all the different routing rules to teach the controller how to take incoming traffic and send them to the correct clusterIP service
    - host: posts.com #domain name, we need to trick our computer to connect to local host when we go to posts.com
      #run "code /etc/hosts"
      http:
        paths:
          - path: /posts/create #posts pod
            #pathType: Prefix
            backend:
              serviceName: posts-clusterip-srv
              servicePort: 4000
          - path: /posts #query pod
            #pathType: Prefix
            backend:
              serviceName: query-srv
              servicePort: 4002
          - path: /posts/?(.*)/comments #the middle is the wild card for id
            pathType: Prefix
            backend:
              serviceName: comments-srv
              servicePort: 4001
          - path: /?(.*) #if you use react router, you need write it like this. This pass needs to go at the end
            pathType: Prefix
            backend:
              serviceName: client-srv
              servicePort: 3000
